<resources>
    <string name="app_name">ESDC SmartWatch</string>
    <string name="title">1234</string>
    <string name="btn_LinkDevice">搜索蓝牙设备</string>
    <string name="btn_TestBle">蓝牙调试</string>
    <string name="title_activity_ble_link">BleLinkActivity</string>
    <string name="textBleState_NoLink">蓝牙设备未连接</string>
    <string name="textBleState_Linked">蓝牙设备已连接：</string>
    <string name="btn_DeviceScan">扫描蓝牙设备</string>
    <string name="scanning">扫描中…</string>
    <string name="state_connected">已连接</string>
    <string name="state_disconnected">未连接</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="disconnecting">正在断开</string>
    <string name="connecting">正在连接</string>
    <string name="send">发送</string>
    <string name="CV">循环伏安</string>
    <string name="receive">数据接收</string>
    <string name="Chart">图表</string>
    <string name="Start">开始</string>
    <string name="Stop">停止</string>
    <string name="maxValue">最大值</string>
    <string name="minValue">最小值</string>
    <string name="Potentiometer">电位计</string>
    <string name="time_pot">间隔时间</string>
    <string name="data">数据</string>
    <string name="copy">复制</string>
    <string name="copied">已复制到剪贴板</string>
    <string name="clear">清空</string>
    <string name="mix_test">四通道混合测试</string>
    <string name="pot1">电位1</string>
    <string name="pot2">电位2</string>
    <string name="it1">恒电位仪1</string>
    <string name="it2">恒电位仪2</string>
    <string name="hr">心率</string>
    <string name="pedo">步数</string>
    <string name="temp">温度</string>
    <string name="NA">N/A</string>
    <string name="NAHR">N/A bpm</string>
    <string name="Step">步数</string>
    <string name="NAStep">N/A 步</string>
    <string name="NATemp">N/A ℃</string>
    <string name="mental">压力</string>
    <string name="neutral">中性</string>
    <string name="stress">紧张</string>
    <string name="graph">绘图</string>
    <string name="mainPage">主页</string>
    <string name="save">保存</string>
    <string name="BleLinkTitle">Hello ble link fragment</string>
    <string name="DataPlotTitle">Hello data plot fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>