<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_fragment"
    tools:context=".MainFragment">
<!--    <?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--tools:context=".MainFragment"-->
<!--tools:ignore="ExtraText">-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/main_BleLinkState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="64dp"
        android:text="@string/textBleState_NoLink"
        android:textAlignment="center" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="120dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textHR"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:autoSizeTextType="uniform"
                android:text="@string/hr"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textViewHrValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/NAHR"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="92dp">

            <TextView
                android:id="@+id/textTEMP"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:autoSizeTextType="none"
                android:text="@string/temp"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textViewTempValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/NATemp"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textPedo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:autoSizeTextType="uniform"
                android:text="@string/pedo"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textViewPedoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/NAStep"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textMental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:autoSizeTextType="none"
                android:text="@string/mental"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textViewMentalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/NA"
                android:textSize="34sp" />

        </TableRow>
    </TableLayout>
</FrameLayout>
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->